# gospl

./: .coveragerc  .coveralls.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  .pyup.yml  .readthedocs.yml  .travis.yml  .zenodo.json  AGENTS.md  CODE_OF_CONDUCT.md  Dockerfile  MANIFEST.in  README.md  README.rst  REFACTOR_AUDIT.md  conda-env.yml  environment.yml  hpcrequirements.txt  install_HPC.sh  meson.build  pyproject.toml  requirements.txt  requirements_hpc.txt  setup.py  usydHPC.md
.github/scripts/: triage_bot.py
.github/workflows/: _release-gate.yml  codeql.yml  conda-build.yml  docker-build.yml  issue-triage.yml  pypi-publish.yml  pypi.yml  tests-pr.yml  tests-slow.yml
benchmarks/: conftest.py  test_hillslope.py  test_knickpoint.py  test_spl.py
benchmarks/hillslope/: test-hillslope.py
benchmarks/knickpoint/: make-input.py  test-knickpoint.py
benchmarks/spl/: input.yml  make-input.py  test-SPL.py
conda/: README.md  build.sh  meta.yaml
docker/: Dockerfile  Singularity.def  bashrc-term  build-dockerfile.sh  build.sh
docker/slurm/: gadi.pbs  setonix.slurm
dockerhub/: Dockerfile  Dockerfile-bio  Dockerfile-debian  Dockerfile-paleoflow  Dockerfile-test  README.md  bashrc-bio  bashrc-term  run-jupyter.sh  run-jupyterlab.sh
docs/: DESIGN_DUAL_LITHOLOGY.md  DESIGN_ICE_SHEET.md  DESIGN_PROVENANCE.md  DESIGN_WATERTABLE_DURICRUST.md  DUAL_LITHOLOGY_SUMMARY.md  HOW_TO_ADD_FORCING.md  HOW_TO_ADD_OUTPUT.md  ICE_SHEET_SUMMARY.md  LICENSESHORT  Makefile  README.md  about.rst  api.rst  conf.py  contributing.rst  environment.yml  examples.rst  index.rst  inputfile.rst  install.rst  oldindex.rst  refs.bib  requirements.txt
docs/_static/: gospl.css  version_switch.json  version_switcher.json
docs/_templates/: breadcrumb.html  layout.html
docs/api_ref/: analyse_ref.rst  flow_ref.rst  gflex_ref.rst  grid_ref.rst  hill_ref.rst  ice_ref.rst  in_ref.rst  index.rst  io_ref.rst  mesh_ref.rst  model_ref.rst  nlspl_ref.rst  out_ref.rst  pit_ref.rst  plate_ref.rst  sea_ref.rst  sed_ref.rst  soilspl_ref.rst  spl_ref.rst  stra_ref.rst  voro_ref.rst
docs/getting_started/: index.rst  installConda.rst  installDocker.rst  installHPC.rst  installPip.rst  installPypi.rst  installSrc.rst
docs/tech_guide/: dep.rst  ero.rst  flow.rst  hill.rst  ice.rst  index.rst  mar.rst  provenance.rst  strat.rst  tecto.rst
docs/user_guide/: DualLithologies.ipynb  HPC.rst  advance.rst  bfModel.ipynb  dualLithology.ipynb  examples.rst  hpc_scaling.rst  index.rst  inputfile.rst  optfile1.rst  optfile2.rst  outputs.rst  running.rst  surfproc.rst
fortran/: functions.F90  functions.pyf  functionsmodule.h  meshparams.mod
gLEM/: __init__.py  model.py
gLEM/fit/: __init__.py  paleofit.py
gLEM/flow/: __init__.py  surfprocplex.py
gLEM/tools/: inputparser.py  (+1 more)
gospl/: __init__.py  __main__.py  cli.py  model.py
hpc_setup/: install_info.yml  nciRun.pbs
paper/: paper.bib  paper.md
scripts/: ela_from_temperature.py
tests/: conftest.py  runBackward.py  runCarb.py  runForward.py  runNormal.py  runNormalNl.py  runRestart.py  runStrat.yml  test_catchment.py  test_cli.py  test_ela_from_temperature.py  test_gospl.py  test_gridexport.py  test_imports.py  test_normal.py  test_profiler.py  test_provenance.py  test_regression.py  test_stratamesh.py  test_stratasection.py
(+219 files in other folders)
